name changes to creative Board

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Creative Draw</title>
+    <title>Creative Board</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover, shrink-to-fit=no"
@@ -14,26 +14,26 @@
     <!-- Primary Meta Tags -->
     <meta
       name="title"
-      content="Creative Draw — Collaborative whiteboarding made easy"
+      content="Creative Board — Collaborative whiteboarding made easy"
     />
     <meta
       name="description"
-      content="Creative Draw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+      content="Creative Board is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
     />
     <meta name="image" content="https://creative-draw.vercel.app/og-general-v1.png" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:site_name" content="Creativedraw" />
+    <meta property="og:site_name" content="Creativeboard" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://creative-draw.vercel.app" />
     <meta
       property="og:title"
-      content="Creative Draw — Collaborative whiteboarding made easy"
+      content="Creative Board — Collaborative whiteboarding made easy"
     />
-    <meta property="og:image:alt" content="Creativedraw logo" />
+    <meta property="og:image:alt" content="Creativeboard logo" />
     <meta
       property="og:description"
-      content="Creative Draw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+      content="Creative Board is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
     />
     <meta property="og:image" content="https://creative-draw.vercel.app/og-fb-v1.png" />
 
@@ -43,11 +43,11 @@
     <meta property="twitter:url" content="https://creative-draw.vercel.app" />
     <meta
       property="twitter:title"
-      content="Creative Draw — Collaborative whiteboarding made easy"
+      content="Creative Board — Collaborative whiteboarding made easy"
     />
     <meta
       property="twitter:description"
-      content="Creative Draw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+      content="Creative Board is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
     />
     <meta
       property="twitter:image"
@@ -57,7 +57,7 @@
     <!-- General tags -->
     <meta
       name="description"
-      content="Creative Draw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+      content="Creative Board is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
     />
 
     <!------------------------------------------------------------------------->
@@ -80,7 +80,7 @@
     <!------------------------------------------------------------------------->
 
     <script>
-      // Redirect Creativedraw+ users which have auto-redirect enabled.
+      // Redirect Creativeboard+ users which have auto-redirect enabled.
       //
       // Redirect only the bare root path, so link/room/library urls are not
       // redirected.
@@ -100,7 +100,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <!-- Creativedraw version -->
+    <!-- Creativeboard version -->
     <meta name="version" content="{version}" />
 
     <link
@@ -210,7 +210,7 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <header>
-      <h1 class="visually-hidden">Creativedraw</h1>
+      <h1 class="visually-hidden">Creativeboard</h1>
     </header>
     <div id="root"></div>
   </body>
